src/adventOfCode/days/02.2/log.md
# systemPrompt

You solve coding exercises

# preSolvePrompts

## preSolvePrompt: 0

Here is a coding problem:

The Elves begin to set up camp on the beach. To decide whose tent gets to be closest to the snack storage, a giant Rock Paper Scissors tournament is already in progress.

Rock Paper Scissors is a game between two players. Each game contains many rounds; in each round, the players each simultaneously choose one of Rock, Paper, or Scissors using a hand shape. Then, a winner for that round is selected: Rock defeats Scissors, Scissors defeats Paper, and Paper defeats Rock. If both players choose the same shape, the round instead ends in a draw.

Appreciative of your help yesterday, one Elf gives you an encrypted strategy guide (your puzzle input) that they say will be sure to help you win. "The first column is what your opponent is going to play: A for Rock, B for Paper, and C for Scissors. The second column--" Suddenly, the Elf is called away to help with someone's tent.

The second column, you reason, must be what you should play in response: X for Rock, Y for Paper, and Z for Scissors. Winning every time would be suspicious, so the responses must have been carefully chosen.

The winner of the whole tournament is the player with the highest score. Your total score is the sum of your scores for each round. The score for a single round is the score for the shape you selected (1 for Rock, 2 for Paper, and 3 for Scissors) plus the score for the outcome of the round (0 if you lost, 3 if the round was a draw, and 6 if you won).

Since you can't be sure if the Elf is trying to help you or trick you, you should calculate the score you would get if you were to follow the strategy guide.

For example, suppose you were given the following strategy guide:

A Y
B X
C Z

This strategy guide predicts and recommends the following:

    In the first round, your opponent will choose Rock (A), and you should choose Paper (Y). This ends in a win for you with a score of 8 (2 because you chose Paper + 6 because you won).
    In the second round, your opponent will choose Paper (B), and you should choose Rock (X). This ends in a loss for you with a score of 1 (1 + 0).
    The third round is a draw with both players choosing Scissors, giving you a score of 3 + 3 = 6.

In this example, if you were to follow the strategy guide, you would get a total score of 15 (8 + 1 + 6).

What would your total score be if everything goes exactly according to your strategy guide?

Your puzzle answer was 11475.
--- Part Two ---

The Elf finishes helping with the tent and sneaks back over to you. "Anyway, the second column says how the round needs to end: X means you need to lose, Y means you need to end the round in a draw, and Z means you need to win. Good luck!"

The total score is still calculated in the same way, but now you need to figure out what shape to choose so the round ends as indicated. The example above now goes like this:

    In the first round, your opponent will choose Rock (A), and you need the round to end in a draw (Y), so you also choose Rock. This gives you a score of 1 + 3 = 4.
    In the second round, your opponent will choose Paper (B), and you choose Rock so you lose (X) with a score of 1 + 0 = 1.
    In the third round, you will defeat your opponent's Scissors with Rock for a score of 1 + 6 = 7.

Now that you're correctly decrypting the ultra top secret strategy guide, you would get a total score of 12.

Following the Elf's instructions for the second column, what would your total score be if everything goes exactly according to your strategy guide?


Please explain 3-5 small steps to solve part 2 of the problem. Show your reasoning and explain your answer.


# completionsSoFar: 

## completion 0 
system: 

You solve coding exercises


## completion 1 
user: 

Here is a coding problem:

The Elves begin to set up camp on the beach. To decide whose tent gets to be closest to the snack storage, a giant Rock Paper Scissors tournament is already in progress.

Rock Paper Scissors is a game between two players. Each game contains many rounds; in each round, the players each simultaneously choose one of Rock, Paper, or Scissors using a hand shape. Then, a winner for that round is selected: Rock defeats Scissors, Scissors defeats Paper, and Paper defeats Rock. If both players choose the same shape, the round instead ends in a draw.

Appreciative of your help yesterday, one Elf gives you an encrypted strategy guide (your puzzle input) that they say will be sure to help you win. "The first column is what your opponent is going to play: A for Rock, B for Paper, and C for Scissors. The second column--" Suddenly, the Elf is called away to help with someone's tent.

The second column, you reason, must be what you should play in response: X for Rock, Y for Paper, and Z for Scissors. Winning every time would be suspicious, so the responses must have been carefully chosen.

The winner of the whole tournament is the player with the highest score. Your total score is the sum of your scores for each round. The score for a single round is the score for the shape you selected (1 for Rock, 2 for Paper, and 3 for Scissors) plus the score for the outcome of the round (0 if you lost, 3 if the round was a draw, and 6 if you won).

Since you can't be sure if the Elf is trying to help you or trick you, you should calculate the score you would get if you were to follow the strategy guide.

For example, suppose you were given the following strategy guide:

A Y
B X
C Z

This strategy guide predicts and recommends the following:

    In the first round, your opponent will choose Rock (A), and you should choose Paper (Y). This ends in a win for you with a score of 8 (2 because you chose Paper + 6 because you won).
    In the second round, your opponent will choose Paper (B), and you should choose Rock (X). This ends in a loss for you with a score of 1 (1 + 0).
    The third round is a draw with both players choosing Scissors, giving you a score of 3 + 3 = 6.

In this example, if you were to follow the strategy guide, you would get a total score of 15 (8 + 1 + 6).

What would your total score be if everything goes exactly according to your strategy guide?

Your puzzle answer was 11475.
--- Part Two ---

The Elf finishes helping with the tent and sneaks back over to you. "Anyway, the second column says how the round needs to end: X means you need to lose, Y means you need to end the round in a draw, and Z means you need to win. Good luck!"

The total score is still calculated in the same way, but now you need to figure out what shape to choose so the round ends as indicated. The example above now goes like this:

    In the first round, your opponent will choose Rock (A), and you need the round to end in a draw (Y), so you also choose Rock. This gives you a score of 1 + 3 = 4.
    In the second round, your opponent will choose Paper (B), and you choose Rock so you lose (X) with a score of 1 + 0 = 1.
    In the third round, you will defeat your opponent's Scissors with Rock for a score of 1 + 6 = 7.

Now that you're correctly decrypting the ultra top secret strategy guide, you would get a total score of 12.

Following the Elf's instructions for the second column, what would your total score be if everything goes exactly according to your strategy guide?


Please explain 3-5 small steps to solve part 2 of the problem. Show your reasoning and explain your answer.


## completion 2 
assistant: 

To solve part 2 of the problem, follow these steps:

1. Understand the new rules: The second column now indicates the desired outcome of the round (X for losing, Y for drawing, and Z for winning). You need to choose the appropriate shape to achieve this outcome against your opponent's predicted shape.

2. Iterate through the strategy guide: For each round, read the opponent's predicted shape (A, B, or C) and the desired outcome (X, Y, or Z).

3. Determine your shape: Based on the opponent's shape and the desired outcome, choose the appropriate shape to play. For example, if the opponent plays Rock (A) and you need to win (Z), you should play Paper.

4. Calculate the score for each round: Calculate the score for the shape you selected (1 for Rock, 2 for Paper, and 3 for Scissors) plus the score for the outcome of the round (0 if you lost, 3 if the round was a draw, and 6 if you won).

5. Sum the scores: Add up the scores for each round to get your total score.

By following these steps, you can calculate your total score according to the Elf's instructions for the second column.


# solvePrompt:

You must solve part 2 of using Deno and Typescript.

You can read files in Deno like this:

```typescript
import * as path from 'https://deno.land/std@0.101.0/path/mod.ts'

const readRelativeInput = (importUrl, inputFile) => {
  const dirname = path.dirname(path.fromFileUrl(importUrl))
  const filePath = path.join(dirname, 'data', inputFile)
  return Deno.readTextFileSync(filePath)
}
```

The puzzle input is stored at `./data/puzzleInput.txt`


Your solution should print console.log statements to help me understand what is happening as the code runs.

The last thing your solution should do is print the answer to the puzzle on a new line like this: `console.log('\n', answer)`


# answer: 

Here's a solution for part 2 of the problem using Deno and TypeScript:

```typescript
// Import required modules
import * as path from 'https://deno.land/std@0.101.0/path/mod.ts';

const readRelativeInput = (importUrl: string, inputFile: string) => {
  const dirname = path.dirname(path.fromFileUrl(importUrl));
  const filePath = path.join(dirname, 'data', inputFile);
  return Deno.readTextFileSync(filePath);
};

const calculateScore = (opponentShape: string, desiredOutcome: string): number => {
  let yourShape: string;
  let score = 0;

  if (desiredOutcome === 'X') {
    yourShape = opponentShape === 'A' ? 'C' : (opponentShape === 'B' ? 'A' : 'B');
  } else if (desiredOutcome === 'Y') {
    yourShape = opponentShape;
  } else {
    yourShape = opponentShape === 'A' ? 'B' : (opponentShape === 'B' ? 'C' : 'A');
  }

  score += yourShape === 'A' ? 1 : (yourShape === 'B' ? 2 : 3);
  score += yourShape === opponentShape ? 3 : (yourShape === 'A' && opponentShape === 'C' || yourShape === 'B' && opponentShape === 'A' || yourShape === 'C' && opponentShape === 'B' ? 6 : 0);

  return score;
};

const main = () => {
  const input = readRelativeInput(import.meta.url, 'puzzleInput.txt');
  const lines = input.trim().split('\n');
  let totalScore = 0;

  console.log('Processing strategy guide...');

  for (const line of lines) {
    const [opponentShape, desiredOutcome] = line.split(' ');
    const roundScore = calculateScore(opponentShape, desiredOutcome);
    console.log(`Opponent shape: ${opponentShape}, Desired outcome: ${desiredOutcome}, Round score: ${roundScore}`);
    totalScore += roundScore;
  }

  console.log('\n', totalScore);
};

main();
```

This code reads the puzzle input from the `./data/puzzleInput.txt` file and processes each line to calculate the score for each round based on the opponent's shape and the desired outcome. It then adds up the scores for each round to get the total score and prints it as the answer to the puzzle. The console.log statements help you understand the processing of the strategy guide and the score for each round.
formatting
# Trying solution: 

 ```typescript
// Import required modules
import * as path from "https://deno.land/std@0.101.0/path/mod.ts";

const readRelativeInput = (importUrl: string, inputFile: string) => {
  const dirname = path.dirname(path.fromFileUrl(importUrl));
  const filePath = path.join(dirname, "data", inputFile);
  return Deno.readTextFileSync(filePath);
};

const calculateScore = (
  opponentShape: string,
  desiredOutcome: string,
): number => {
  let yourShape: string;
  let score = 0;

  if (desiredOutcome === "X") {
    yourShape = opponentShape === "A"
      ? "C"
      : (opponentShape === "B" ? "A" : "B");
  } else if (desiredOutcome === "Y") {
    yourShape = opponentShape;
  } else {
    yourShape = opponentShape === "A"
      ? "B"
      : (opponentShape === "B" ? "C" : "A");
  }

  score += yourShape === "A" ? 1 : (yourShape === "B" ? 2 : 3);
  score += yourShape === opponentShape
    ? 3
    : (yourShape === "A" && opponentShape === "C" ||
        yourShape === "B" && opponentShape === "A" ||
        yourShape === "C" && opponentShape === "B"
      ? 6
      : 0);

  return score;
};

const main = () => {
  const input = readRelativeInput(import.meta.url, "puzzleInput.txt");
  const lines = input.trim().split("\n");
  let totalScore = 0;

  console.log("Processing strategy guide...");

  for (const line of lines) {
    const [opponentShape, desiredOutcome] = line.split(" ");
    const roundScore = calculateScore(opponentShape, desiredOutcome);
    console.log(
      `Opponent shape: ${opponentShape}, Desired outcome: ${desiredOutcome}, Round score: ${roundScore}`,
    );
    totalScore += roundScore;
  }

  console.log("\n", totalScore);
};

main();

``` 

solution: 16862, actual solution: 16862
Solved!
Is success: true
